fixed word-wrap bug

--- a/_statics/main.css
+++ b/_statics/main.css
@@ -49,6 +49,15 @@ p code {
     border-radius: 3px;
 }
 
+li > code, p > code, div > code, body > code {
+    word-wrap:break-word;
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 a  > code,
 h1 > code,
 h2 > code,
